--- a/_participants/2019/ben.peachey.yml
+++ b/_participants/2019/ben.peachey.yml
@@ -19,7 +19,7 @@ github: potherca
 
 # ------------------------------------------------------------------------------
 # What level of open-source contribution skillz do you have?
-# beginner / intermediate / advenced
+# beginner / intermediate / advanced
 level: advanced
 
 # ==============================================================================
