LinkedIn link repaired

--- a/_participants/2019/bartosz.przadka.yml
+++ b/_participants/2019/bartosz.przadka.yml
@@ -35,7 +35,7 @@ repos:
 # Where else can you be found? The key names can be whatever you like.
 # You can use letter and numbers, underscores can be used as spaces.
 social:
-  LinkedIn: www.linkedin.com/in/bartoszprzadka
+  LinkedIn: https://www.linkedin.com/in/bartoszprzadka
 
 # Are you affilated to a company, place of education, or other organisation?
 organisation: 
